[package]
name = "bn-rs"
version = "0.1.0"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
primitive-types = { version = "0.10.1", default-features = false }
thiserror = "1.0.30"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
