[package]
name = "bn-rs"
version = "0.2.3"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/bn-rs"
repository = "https://github.com/shekhirin/bn.rs"
homepage = "https://docs.rs/bn-rs"
description = """
bn.js and ethers.js BigNumber bindings for Rust & WebAssembly
"""
keywords = ["javascript", "wasm", "webassembly", "numbers"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
primitive-types = { version = "0.12", features = ["rustc-hex"] }
rustc-hex = "2.0.1"
getrandom = { version = "0.2.3", features = ["js"] }
thiserror = "1.0.30"
uint = "0.9.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[features]
default = ["bn-js", "ethers-js"]
bn-js = []
ethers-js = []
