[package]
name = "bn-rs-example"
version = "0.1.0"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bn-rs = { path = ".." }
primitive-types = { version = "0.11.1", features = ["rustc-hex"] }
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen = "0.2.78"

[lib]
crate-type = ["cdylib", "rlib"]
